[gd_scene load_steps=12 format=3 uid="uid://cublvc7s18q3a"]

[ext_resource type="Script" uid="uid://biq01rnybcyjb" path="res://scenes/bear.gd" id="1_5084r"]
[ext_resource type="Texture2D" uid="uid://dnixkife5moqb" path="res://assets/bear_statue.png" id="2_5084r"]
[ext_resource type="Texture2D" uid="uid://da6cpijlphj45" path="res://assets/gui/panel_bg.png" id="3_cm6re"]
[ext_resource type="Texture2D" uid="uid://boewt6ef3fe27" path="res://assets/bear_statue_gold.png" id="3_x34g0"]
[ext_resource type="LabelSettings" uid="uid://cn1rdmmbnmsu3" path="res://assets/gui/button_font.tres" id="4_iwa67"]
[ext_resource type="FontFile" uid="uid://b7vkyxnsa7dol" path="res://assets/fonts/Sunset Friday.otf" id="5_ym5xy"]
[ext_resource type="Texture2D" uid="uid://dogtp5dbjim3t" path="res://assets/gui/button_1.png" id="9_ejuj0"]
[ext_resource type="Texture2D" uid="uid://vfm1p832dp0b" path="res://assets/gui/button_1_hover.png" id="10_eblmn"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_052ee"]
radius = 26.0
height = 142.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_aqk2v"]
radius = 192.5
height = 448.0

[sub_resource type="LabelSettings" id="LabelSettings_4e8ou"]
font = ExtResource("5_ym5xy")
font_size = 32

[node name="Bear" type="StaticBody2D" groups=["bee_colony"]]
input_pickable = true
script = ExtResource("1_5084r")

[node name="AnchorNode" type="Node2D" parent="."]
position = Vector2(0, -142)

[node name="TextureProgressBar" type="TextureProgressBar" parent="AnchorNode"]
offset_left = -86.0
offset_top = -111.0
offset_right = 89.0
offset_bottom = 145.0
value = 50.0
fill_mode = 3
texture_under = ExtResource("2_5084r")
texture_progress = ExtResource("3_x34g0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -24.5)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_052ee")

[node name="InteractiveArea2D" type="Area2D" parent="." groups=["too_close_bubble"]]
position = Vector2(0, -140)

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractiveArea2D"]
position = Vector2(2, 15)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_aqk2v")

[node name="InfoPanel" type="TextureRect" parent="."]
z_index = 100
offset_left = 59.0
offset_top = -271.0
offset_right = 638.0
offset_bottom = 254.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_cm6re")

[node name="HeaderLabel" type="Label" parent="InfoPanel"]
z_index = 101
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -233.50002
offset_top = -218.5
offset_right = 239.83331
offset_bottom = -160.49998
grow_horizontal = 2
grow_vertical = 2
text = "Bear - %50"
label_settings = ExtResource("4_iwa67")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusLabel" type="Label" parent="InfoPanel"]
z_index = 101
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -243.5
offset_top = -165.16666
offset_right = 239.83331
offset_bottom = -118.499985
grow_horizontal = 2
grow_vertical = 2
text = "Turning gold with each offering"
label_settings = SubResource("LabelSettings_4e8ou")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OfferingFlowContainer" type="HFlowContainer" parent="InfoPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 64.0
offset_top = 153.0
offset_right = 524.0
offset_bottom = 454.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
offset_left = 82.0
offset_top = -60.5
offset_right = 557.0
offset_bottom = 380.5
scale = Vector2(0.52, 0.52)
theme_override_constants/separation = -60

[node name="HoneycombActionButton" type="TextureButton" parent="VBoxContainer"]
z_index = 100
layout_mode = 2
texture_normal = ExtResource("9_ejuj0")
texture_hover = ExtResource("10_eblmn")

[node name="Label" type="Label" parent="VBoxContainer/HoneycombActionButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -169.96155
offset_top = -26.192299
offset_right = 167.03845
offset_bottom = 31.807701
grow_horizontal = 2
grow_vertical = 2
text = "Offer Honey"
label_settings = ExtResource("4_iwa67")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HoneyActionButton" type="TextureButton" parent="VBoxContainer"]
z_index = 100
layout_mode = 2
texture_normal = ExtResource("9_ejuj0")
texture_hover = ExtResource("10_eblmn")

[node name="Label" type="Label" parent="VBoxContainer/HoneyActionButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.96155
offset_top = -26.192299
offset_right = 154.03845
offset_bottom = 31.807701
grow_horizontal = 2
grow_vertical = 2
text = "Offer Beeswax"
label_settings = ExtResource("4_iwa67")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BeeswaxActionButton" type="TextureButton" parent="VBoxContainer"]
z_index = 100
layout_mode = 2
texture_normal = ExtResource("9_ejuj0")
texture_hover = ExtResource("10_eblmn")

[node name="Label" type="Label" parent="VBoxContainer/BeeswaxActionButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.96155
offset_top = -26.192299
offset_right = 173.03845
offset_bottom = 31.807701
grow_horizontal = 2
grow_vertical = 2
text = "Offer Mead"
label_settings = ExtResource("4_iwa67")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DebugRichTextLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = -135.0
offset_top = -65.0
offset_right = 193.94223
offset_bottom = 136.0
scale = Vector2(0.5928093, 0.5928093)
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 28
text = "a
b
c
"
fit_content = true

[node name="DoWorkTimer" type="Timer" parent="."]
autostart = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="body_entered" from="InteractiveArea2D" to="." method="_on_interactive_area_2d_body_entered"]
[connection signal="body_exited" from="InteractiveArea2D" to="." method="_on_interactive_area_2d_body_exited"]
[connection signal="pressed" from="VBoxContainer/HoneycombActionButton" to="." method="_on_honeycomb_action_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HoneyActionButton" to="." method="_on_honey_action_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BeeswaxActionButton" to="." method="_on_beeswax_action_button_pressed"]
[connection signal="timeout" from="DoWorkTimer" to="." method="_on_do_work_timer_timeout"]
